# DataCompression-2025.1

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
src/: config.py  main.py
src/core/: compression.py  decompression.py  image_loader.py  metrics.py
src/plotting/: individual_plots.py  summary_plots.py
src/processing/: task_manager.py
src/utils/: csv_utils.py  file_utils.py
