[project]
name = "datacompression-2025-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "pillow>=11.2.1",
    "pywavelets>=1.8.0",
    "rawpy>=0.25.0",
    "scikit-image>=0.25.2",
]
